fixed alignments and fonts

--- a/src/User-Dashboard/dashboard.css
+++ b/src/User-Dashboard/dashboard.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Poppins', sans-serif;
+}
 .dashboard{
     margin-top: 48px;
     margin-left: 50px;
@@ -5,14 +8,17 @@
 
 .logo > img{
     width: 93px;
+    
 }
 
 .side-bar-header{
     display: flex;
+    justify-content: normal;
+    width: 1200px;
 }
 
 .header{
-    margin-left: 22px;
+    margin-left: 18px;
     margin-top: 5px;
 }
 
@@ -42,6 +48,19 @@ align-items: center;
 text-align: center;
 
 }
+
+.welcome{
+    color: #F2F2F2;
+    font-weight: 800;
+font-size: 50px;
+line-height: 75px;
+text-align: right;
+margin-left: 220px;
+
+align-items:flex-end;
+letter-spacing: 0.08em;
+}
+
 
 .user-card{
     position: absolute;
@@ -89,4 +108,97 @@ border-radius: 25px;
     border: 2px solid #FF3E3E;
     margin-left: 88px;
     margin-top: 30px;
+}
+
+.post-section{
+    margin-left: 450px;
+    margin-top: 50px;
+
+}
+
+.create-post{
+    position: absolute;
+width: 440px;
+height: 190px;
+margin-left: 0;
+
+
+background: #012934;
+border: 10px solid #033841;
+box-sizing: border-box;
+border-radius: 25px;
+}
+.create-post-1{
+    display: flex;
+    background-color: #012934;
+}
+.plus-sign{
+    background-color: #012934;
+    width:100px;
+}
+.plus-sign > img{
+    margin-left: 20px;
+    margin-top: 20px;
+    background: #012934;
+}
+.create-post .text{
+    background: #012934;
+    margin-left: 20px;
+    margin-top: 30px;
+    font-size: 20px;
+line-height: 30px;
+
+color: rgba(242, 242, 242, 0.6);
+
+}
+
+.post-button{
+    background: #012934;
+}
+.post-button>button{
+    border-radius: 16px;
+    color:#F2F2F2;
+    height: 40px;
+    width: 100px;
+    border: 2px solid #FF3E3E;
+    align-self: right;
+    margin-top: 20px;
+    margin-left: 300px;
+}
+
+.posts{
+    margin-left: 0;
+}
+
+.posts-post-1{
+    position: absolute;
+    display:flex;
+width: 440px;
+height: 190px;
+margin-top: 250px;
+background: #012934;
+border: 10px solid #033841;
+box-sizing: border-box;
+border-radius: 25px;
+}
+
+.avatar{
+    width: 75px;
+    height: 75px;
+    margin-left: 20px;
+    margin-top: 20px;
+    background: #001B27;
+    border-radius: 50%;
+    border: 5px solid #033841;
+    box-sizing: border-box;
+
+}
+.posts-post-1 .text{
+    background: #012934;
+    margin-left: 20px;
+    margin-top: 30px;
+    font-size: 20px;
+    line-height: 30px;
+
+    color: rgba(242, 242, 242, 0.6);
 }
